# hps_labs

./: .gitignore  README.md
lab1_matmul/: CMakeLists.txt  README.md  benchmark_results.csv
lab1_matmul/include/: matmul.hpp
lab1_matmul/scripts/: plot_speedup.py
lab1_matmul/src/: cpu.cpp  gpu.cu  gpu_stub.cpp  main.cpp
lab2_vectorsum/: CMakeLists.txt  Makefile  README.md
lab2_vectorsum/src/: main.cu
lab3_pi_monte_carlo/: CMakeLists.txt  Makefile  README.md
lab3_pi_monte_carlo/src/: main.cu
lab4_salt_and_pepper/: CMakeLists.txt  Makefile  README.md
lab4_salt_and_pepper/scripts/: generate_test_bmp.py
lab4_salt_and_pepper/src/: main.cu
